tests/xml/invalidxml/version/badver3.xml.README
badver3.xml: BAD invalid attribute "bogus"
